--- a/chrome-extension/sparxmaths/release2.json
+++ b/chrome-extension/sparxmaths/release2.json
@@ -4,6 +4,6 @@
         "js": ["https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"],
         "css": ["https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"]
     },
-    "contentScript": "https://cdn.jsdelivr.net/gh/SintcoLTD/CDN@main/chrome-extension/sparxmaths/console/113console.js",
+    "contentScript": "https://raw.githubusercontent.com/SintcoLTD/CDN/main/chrome-extension/sparxmaths/console/console.js",
     "licenses": "https://cdn.jsdelivr.net/gh/SintcoLTD/sparxmaths@main/licenses.json"
 }
